Complete startMenu section

--- a/index.html
+++ b/index.html
@@ -8,9 +8,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Pig | The Dice Game</title>
+    <link rel="shortcut icon" href="images/dice.ico">
   </head>
   <body>
-
+    <div class="container-fluid">
+      <div class="jumbotron startMenu">
+        <h1>PIG</h1>
+        <p>(THE DICE GAME)</p>
+        <h2>Let's Play!</h2>
+        <div class="inputForm">
+          <form id="player1">
+              <div class="formGroup">
+                <input placeholder="Player 1's Name" class="player1Name formBox" type="text">
+              </div>
+          </form>
+          <form id="player2">
+              <div class="formGroup">
+                <input placeholder="Player 2's Name" class="player2Name formBox" type="text">
+              </div>
+          </form>
+        </div>
+        <button id="newGameBtn" type="button" name="newGame">New Game</button>
+      </div>
+    </div>
   </body>
 </html>
