Complete css and part of user interface

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <p>(THE DICE GAME)</p>
         <div class="row">
           <div id="line" class="col-md-6 player1GB">
-            <h3>Player 1 <span id = "player1Name"></span><br><span id="totalScore"></span></h3>
+            <h3><span id="player1Name"></span><br><span id="totalScore"></span></h3>
             <div class="btns">
               <button id="player1-roll" class="btnBox">Roll</button>
               <button id="player1-hold" class="btnBox">Hold</button>
@@ -46,7 +46,7 @@
             <h4>Current <span id="diceRoll1"></span><br></h4>
           </div>
           <div class="col-md-6 player2GB">
-            <h3>Player 2 <span id = "player2Name"></span><br><span id="totalScore"></span></h3>
+            <h3><span id="player2Name"></span><br><span id="totalScore"></span></h3>
             <div class="btns">
               <button id="player1-roll" class="btnBox">Roll</button>
               <button id="player1-hold" class="btnBox">Hold</button>
