Update HTML & JS

--- a/index.html
+++ b/index.html
@@ -37,21 +37,21 @@
         <h1>PIG</h1>
         <p>(THE DICE GAME)</p>
         <div class="row">
-          <div id="line" class="col-md-6 player1GB">
-            <h3><span id="player1Name"></span><br><span id="totalScore"></span></h3>
+          <div id="line" class="col-md-6 ">
+            <h3><span id="player1Name"></span><br><br><span id="totalScore1"></span></h3>
             <div class="btns">
               <button id="player1-roll" class="btnBox">Roll</button>
               <button id="player1-hold" class="btnBox">Hold</button>
             </div>
-            <h4>Current <span id="diceRoll1"></span><br></h4>
+            <h4><span id="diceRoll1"></span><br><br> Current <br><br></h4>
           </div>
-          <div class="col-md-6 player2GB">
-            <h3><span id="player2Name"></span><br><span id="totalScore"></span></h3>
+          <div class="col-md-6">
+            <h3><span id="player2Name"></span><br><br><span id="totalScore2"></span></h3>
             <div class="btns">
-              <button id="player1-roll" class="btnBox">Roll</button>
-              <button id="player1-hold" class="btnBox">Hold</button>
+              <button id="player2-roll" class="btnBox">Roll</button>
+              <button id="player2-hold" class="btnBox">Hold</button>
             </div>
-            <h4>Current <span id="diceRoll1"></span><br></h4>
+            <h4><span id="diceRoll2"></span><br><br> Current <br><br><span id="currentScore2"></span></h4>
           </div>
         </div>
         <button id="newGameBtn" name="newGame">New Game</button>
